Made space for another tab

--- a/src/main/res/layout/main.xml
+++ b/src/main/res/layout/main.xml
@@ -1,84 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:paddingLeft="16dp"
-    android:orientation="vertical"
-    android:paddingRight="16dp" >
-    <RelativeLayout
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="20dp"
-        android:paddingBottom="50dp"
-        android:layout_gravity="center_horizontal" >
-        <TextView
-            android:id="@+id/labelstats"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="24sp"
-            android:text="Your score: " />
-        <TextView
-            android:id="@+id/stats"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="24sp"
-            android:text="0/0"
-            android:onClick="statsReset"
-            android:layout_toRightOf="@id/labelstats"/>
-    </RelativeLayout>
-    <RelativeLayout
-        android:layout_gravity="center"
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="200dp"
-        android:layout_centerHorizontal="true">
-        <ImageView
-            android:id="@+id/noteimage"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="fitCenter"
-            android:src="#AAAA00"/>
-    </RelativeLayout>
-    <RelativeLayout
-            android:layout_gravity="center"
-            android:paddingBottom="50dp"
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true">
-        <Button
-                android:id="@+id/buttonReplay"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="replay"
-                android:onClick="replaySound"/>
-    </RelativeLayout>
-    <RelativeLayout
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_centerHorizontal="true">
-        <Button
-            android:id="@+id/buttonLow"
-            android:layout_width="wrap_content"
-            android:layout_height="80sp"
-            android:text="too low"
-            android:onClick="tooLowSelected" />
-        <Button
-            android:id="@+id/buttonPerfect"
-            android:layout_width="wrap_content"
-            android:layout_height="80sp"
-            android:text="Perfect"
-            android:layout_toRightOf="@id/buttonLow"
-            android:onClick="perfectSelected"/>
-        <Button
-            android:id="@+id/buttonHigh"
-            android:layout_width="wrap_content"
-            android:layout_height="80sp"
-            android:text="too high"
-            android:layout_toRightOf="@id/buttonPerfect"
-            android:onClick="tooHighSelected"/>
-    </RelativeLayout>
-</LinearLayout>
+<android.support.v4.view.ViewPager
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/pager"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />
