Audio recordings seem to work now, however there ares no useful results yet.

--- a/src/main/res/layout/control.xml
+++ b/src/main/res/layout/control.xml
@@ -30,7 +30,7 @@
             android:id="@+id/labelmetro"
             android:layout_width="wrap_content"
             android:layout_height="80sp"
-            android:text="Metronom" />
+            android:text="Metronome" />
         <EditText
                 android:id="@+id/metrospeed"
                 android:layout_width="fill_parent"
